--- a/src/Providers/GoogleMapsV3/GoogleMapsV3.csproj
+++ b/src/Providers/GoogleMapsV3/GoogleMapsV3.csproj
@@ -228,6 +228,9 @@
     <Content Include="App_Plugins\Terratype.GoogleMapsV3\Scripts\markerclusterer.js" />
     <Content Include="App_Plugins\Terratype.GoogleMapsV3\Scripts\markerclusterer.min.js" />
     <Content Include="App_Plugins\Terratype.GoogleMapsV3\Scripts\Terratype.GoogleMapsV3.js" />
+    <Content Include="App_Plugins\Terratype.GoogleMapsV3\Scripts\Terratype.GoogleMapsV3.min.js">
+      <DependentUpon>Terratype.GoogleMapsV3.js</DependentUpon>
+    </Content>
     <Content Include="App_Plugins\Terratype.GoogleMapsV3\Scripts\Terratype.GoogleMapsV3.Renderer.bundle.js" />
     <Content Include="App_Plugins\Terratype.GoogleMapsV3\Scripts\Terratype.GoogleMapsV3.Renderer.bundle.min.js">
       <DependentUpon>Terratype.GoogleMapsV3.Renderer.bundle.js</DependentUpon>
