--- a/src/Test/Models/packages.config
+++ b/src/Test/Models/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FluentAssertions" version="4.19.0" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net452" />
+  <package id="LightInject" version="5.4.0" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net452" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" />
 </packages>
